--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = ../BAST
 [submodule "tinyxml2"]
 	path = extern/tinyxml2
-	url = ../tinyxml2
+	url = https://github.com/leethomason/tinyxml2.git
