--- a/test/tools/CMakeLists.txt
+++ b/test/tools/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
 
 project(loadpog_test)
 
@@ -11,4 +11,5 @@ include_directories(
 add_executable(loadpog loadpog.cpp)
 
 target_link_libraries(loadpog PRIVATE POGLIB BAST_LIB tinyxml2::tinyxml2)
-set(loadpog_EXE ${CMAKE_CURRENT_BINARY_DIR}/loadpog CACHE PATH "loadpog executable")
+set(loadpog_EXE ${CMAKE_CURRENT_BINARY_DIR}/loadpog${CMAKE_EXECUTABLE_SUFFIX} CACHE PATH "loadpog executable")
+message(STATUS "loadpog executable: ${loadpog_EXE}")
