--- a/test/tools/CMakeLists.txt
+++ b/test/tools/CMakeLists.txt
@@ -11,5 +11,7 @@ include_directories(
 add_executable(loadpog loadpog.cpp)
 
 target_link_libraries(loadpog PRIVATE POGLIB BAST_LIB tinyxml2::tinyxml2)
+get_target_property(RUNTIME_OUTPUT_DIRECTORY loadpog LOADPOG_OUTPUT_DIRECTORY)
 set(loadpog_EXE ${CMAKE_CURRENT_BINARY_DIR}/loadpog${CMAKE_EXECUTABLE_SUFFIX} CACHE PATH "loadpog executable")
 message(STATUS "loadpog executable: ${loadpog_EXE}")
+message(STATUS "LOADPOG_OUTPUT_DIRECTORY: ${LOADPOG_OUTPUT_DIRECTORY}")
