set .gitmodules URL to github

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "BAST"]
 	path = extern/BAST
-	url = ../BAST
+	url = https://github.com/CLEARSY/BAST.git
 [submodule "tinyxml2"]
 	path = extern/tinyxml2
 	url = https://github.com/leethomason/tinyxml2.git
