--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "BAST"]
 	path = extern/BAST
 	url = https://github.com/CLEARSY/BAST.git
+	branch = main
 [submodule "tinyxml2"]
 	path = extern/tinyxml2
 	url = https://github.com/leethomason/tinyxml2.git
