handle msvc warnings; removes tinyxml2 submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,7 @@ else()
 endif()
 
 foreach(submodule
-"${PROJECT_SOURCE_DIR}/extern/BAST"
-"${PROJECT_SOURCE_DIR}/extern/tinyxml2")
+"${PROJECT_SOURCE_DIR}/extern/BAST")
 if(NOT EXISTS "${submodule}/CMakeLists.txt")
     message(FATAL_ERROR "Submodule ${submodule} is missing: update submodules and try again.")
     message(FATAL_ERROR "Command : git submodule update --init --recursive.")
@@ -38,7 +37,6 @@ endforeach(submodule)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/CMakeModules)
 
-add_subdirectory(extern/tinyxml2)
 add_subdirectory(extern/BAST)
 add_subdirectory(src)
 
