--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(
         ${BASTLIB_SOURCE_DIR}
-        ${tinyxml2_SOURCE_DIR}
 )
 
 set(POGLIB_HEADERS pog.h pogXmlWriter.h)
@@ -11,4 +10,4 @@ set(POGLIB_SOURCES pog.cpp pogXmlWriter.cpp)
 
 add_library(POGLIB STATIC ${POGLIB_SOURCES} ${POGLIB_HEADERS})
 
-target_link_libraries(POGLIB PRIVATE BAST_LIB tinyxml2::tinyxml2)
+target_link_libraries(POGLIB PRIVATE BAST_LIB)
