follow BAST updates [#80199][#80248][gitlab #3]
    - handle unused local variables
    - tinyxml2 removed from sources
    - support for traceability attributes for Pred
    - fix reading base types in POG files

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = extern/BAST
 	url = https://github.com/CLEARSY/BAST.git
 	branch = main
+[submodule "extern/tinyxml2"]
+	path = extern/tinyxml2
+	url = https://github.com/leethomason/tinyxml2.git
