--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,17 +27,13 @@ else()
   set(PROJECT_IS_TOP_LEVEL FALSE)
 endif()
 
-foreach(submodule
-"${PROJECT_SOURCE_DIR}/extern/BAST")
-if(NOT EXISTS "${submodule}/CMakeLists.txt")
-    message(FATAL_ERROR "Submodule ${submodule} is missing: update submodules and try again.")
-    message(FATAL_ERROR "Command : git submodule update --init --recursive.")
-endif()
-endforeach(submodule)
-
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/CMakeModules)
 
-add_subdirectory(extern/BAST)
+if(PROJECT_IS_TOP_LEVEL)
+  add_subdirectory(extern/tinyxml2)
+  add_subdirectory(extern/BAST)
+endif(PROJECT_IS_TOP_LEVEL)
+
 add_subdirectory(src)
 
 if(PROJECT_IS_TOP_LEVEL)
