--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,8 @@ project(POGLIB)
 set(CMAKE_CXX_STANDARD 17)
 
 include_directories(
-        ${BASTLIB_SOURCE_DIR}
+  ${BASTLIB_SOURCE_DIR}
+  ${tinyxml2_SOURCE_DIR}
 )
 
 set(POGLIB_HEADERS pog.h pogXmlWriter.h)
